--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ streamlit>=1.24.0
 pandas>=1.5.0
 scikit-learn>=1.2.0
 PyPDF2>=3.0.0
+numpy>=1.26.0
+blis==0.9.1
 spacy==3.7.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
